--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "hexo-generator-feed": "^1.2.2",
     "hexo-generator-index": "^3.0.0",
     "hexo-generator-search": "^2.4.3",
+    "hexo-generator-sitemap": "^1.2.0",
     "hexo-generator-tag": "^2.0.0",
     "hexo-renderer-ejs": "^2.0.0",
     "hexo-renderer-marked": "^0.2.11",
