--- a/_config.yml
+++ b/_config.yml
@@ -105,7 +105,7 @@ theme: hexo-theme-next-7.8.0
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
   type: git
-  repo: https://github.com/dingdingqiuqiu/dingdingqiuqiu.github.io.git
+  repo: git@github.com:dingdingqiuqiu/dingdingqiuqiu.github.io.git
   branch: main
 #  branch: master
   
