--- a/package.json
+++ b/package.json
@@ -14,12 +14,17 @@
   "dependencies": {
     "hexo": "^7.0.0",
     "hexo-deployer-git": "^4.0.0",
+    "hexo-filter-mathjax": "^0.9.0",
     "hexo-generator-archive": "^2.0.0",
     "hexo-generator-category": "^2.0.0",
     "hexo-generator-index": "^3.0.0",
+    "hexo-generator-searchdb": "^1.4.1",
     "hexo-generator-tag": "^2.0.0",
     "hexo-renderer-ejs": "^2.0.0",
-    "hexo-renderer-marked": "^6.0.0",
+    "hexo-renderer-kramed": "^0.1.4",
+    "hexo-renderer-marked": "^1.0.0",
+    "hexo-renderer-mathjax": "^0.6.0",
+    "hexo-renderer-pandoc": "^0.4.0",
     "hexo-renderer-stylus": "^3.0.0",
     "hexo-server": "^3.0.0",
     "hexo-theme-landscape": "^1.0.0"
