--- a/themes/hexo-theme-next-7.8.0/package.json
+++ b/themes/hexo-theme-next-7.8.0/package.json
@@ -24,13 +24,16 @@
   "devDependencies": {
     "eslint": "^6.8.0",
     "eslint-config-theme-next": "^1.1.4",
-    "gulp": "^4.0.2",
+    "gulp": "^5.0.0",
     "gulp-eslint": "^6.0.0",
-    "gulp-shell": "^0.8.0",
+    "gulp-shell": "^0.6.3",
     "js-yaml": "^3.13.1",
-    "stylint": "^2.0.0"
+    "stylint": "^0.6.3"
   },
   "engines": {
     "node": ">=10.9.0"
+  },
+  "dependencies": {
+    "hexo-renderer-pandoc": "^0.4.0"
   }
 }
